tests/NormalTests/paczka1/fuzzy1/83432944.err
Error in line 1: A467 S798 60,0
Error in line 2: A467 A467 60,7
Error in line 3: A467 A824 60,9
Error in line 4: A467 A621 10,5
Error in line 14: A467 S798 47,3
Error in line 16: A467 A467 31,5
Error in line 30: yaFa A467 36,3
Error in line 21: k5kMsH A621 91,4
Error in line 24: A467 S798 85,4
